# discord-bot

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: ci-cd.yaml  release-packaging.yaml  run-ansible.yaml
config/deploy/: deploy.yml
configs/deploy/: deploy.yml
configs/docker/: Dockerfile
src/: lib.rs  main.rs
src/commands/: gpt.rs  mod.rs  news.rs  quotes.rs  tabnews.rs
src/gpt/: gpt.rs
src/tabnews/: mod.rs  tabnews.rs
src/web_scraper/: mod.rs  web_scraper.rs
src/web_scraper/pages/: mod.rs
src/web_scraper/pages/investing/: news.rs
